Avoid images from being too big

--- a/static/src/scss/screen.scss
+++ b/static/src/scss/screen.scss
@@ -133,6 +133,8 @@ h2 { font-size: 1.3em; margin: 0; padding: 0; }
     font-weight: normal; color: #ccc;
 }
 
+.thread-content img, .post-content img { max-width: 100%; max-height: 300px; }
+
 /* Homepage */
 
 .tag-item { padding: 10px; }
